--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,11 @@
   color: #333333;
   margin: 0;
 }
+@media screen and (max-width: 930px) {
+  .title {
+    font-size: 20px;
+  }
+}
 
 .title--small {
   font-size: 18px;
